force-app/main/default/src/objects/Loop__SecureField__c/Loop__SecureField__c.object-meta.xml
<CustomObject>
    <label>Secure Field</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Tag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secure Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>