force-app/main/default/src/objects/Loop__SecureField__c/fields/Loop__GroupName__c.field-meta.xml
<CustomField>
    <fullName>Loop__GroupName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>