force-app/main/default/src/objects/Loop__SecureField__c/fields/Loop__ListItems__c.field-meta.xml
<CustomField>
    <fullName>Loop__ListItems__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is a semicolon delimited list of pick list items.</inlineHelpText>
    <label>List Items</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>