force-app/main/default/src/objects/Loop__SecureField__c/fields/Loop__ToolTip__c.field-meta.xml
<CustomField>
    <fullName>Loop__ToolTip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tool Tip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>