force-app/main/default/src/objects/Loop__SecureField__c/fields/Loop__Update_Field__c.field-meta.xml
<CustomField>
    <fullName>Loop__Update_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Update Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>