force-app/main/default/src/objects/Loop__SecureField__c/fields/Loop__ValidationMessage__c.field-meta.xml
<CustomField>
    <fullName>Loop__ValidationMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This error message will be displayed if the input does not match the validation pattern.</inlineHelpText>
    <label>Validation Message</label>
    <type>TextArea</type>
</CustomField>