force-app/main/default/src/objects/Loop__SecureField__c/fields/Loop__ValidationPattern__c.field-meta.xml
<CustomField>
    <fullName>Loop__ValidationPattern__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Insert a Regular Expression (RegEx) pattern to validate the input. Learn more about Regular Expressions at www.regexlib.com.</inlineHelpText>
    <label>Validation Pattern</label>
    <type>TextArea</type>
</CustomField>